ros2_study/log/build_2025-11-12_10-53-29/my_first_package/stderr.log
  File "/home/hyh/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/dist_turtle_action_server.py", line 13
    			'dist_turtle'
    			^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

